--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,6 +9,21 @@ doctrine:
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
     orm:
+        dql:
+            datetime_functions:
+                second: DoctrineExtensions\Query\Postgresql\Second
+                minute: DoctrineExtensions\Query\Postgresql\Minute
+                hour: DoctrineExtensions\Query\Postgresql\Hour
+                day: DoctrineExtensions\Query\Postgresql\Day
+                month: DoctrineExtensions\Query\Postgresql\Month
+                year: DoctrineExtensions\Query\Postgresql\Year
+                date_format: DoctrineExtensions\Query\Postgresql\DateFormat
+                at_time_zone: DoctrineExtensions\Query\Postgresql\AtTimeZoneFunction
+                date_part: DoctrineExtensions\Query\Postgresql\DatePart
+                extract: DoctrineExtensions\Query\Postgresql\ExtractFunction
+                date_trunc: DoctrineExtensions\Query\Postgresql\DateTrunc
+                date: DoctrineExtensions\Query\Postgresql\Date
+
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
         report_fields_where_declared: true
