--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,10 +14,10 @@ security:
                 property: email
     firewalls:
         login:
-            pattern: ^/api/login
+            pattern: ^/api/auth$
             stateless: true
             json_login:
-                check_path: /api/login_check
+                check_path: /api/auth
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
@@ -42,7 +42,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+         - { path: ^/api/auth, roles: PUBLIC_ACCESS }
+         - { path: ^/api/user, roles: PUBLIC_ACCESS }
          - { path: ^/api/*, roles: IS_AUTHENTICATED_FULLY }
          - { path: ^/*, roles: ROLE_ADMIN }
 
