feat: Nelmio + data validation

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,6 +44,7 @@ security:
     access_control:
          - { path: ^/api/auth, roles: PUBLIC_ACCESS }
          - { path: ^/api/user, roles: PUBLIC_ACCESS }
+         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
          - { path: ^/api/*, roles: IS_AUTHENTICATED_FULLY }
          - { path: ^/*, roles: ROLE_ADMIN }
 
