--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,9 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
+    exceptions:
+        Symfony\Component\Validator\Exception\ValidationFailedException:
+            status_code: null
+            log_level: notice
     secret: '%env(APP_SECRET)%'
 
     # Note that the session will be started ONLY if you read or write from it.
@@ -10,6 +14,10 @@ framework:
 
 when@test:
     framework:
+        exceptions:
+            Symfony\Component\Validator\Exception\ValidationFailedException:
+                status_code: null
+                log_level: notice
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
