--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,8 @@ controllers:
 
 api_auth:
     path: /api/auth
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
