--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.1",
+        "symfony/debug-bundle": "7.2.*",
         "symfony/maker-bundle": "^1.62.1"
     },
     "config": {
